--- a/web/src/Styles/Config/_reset.scss
+++ b/web/src/Styles/Config/_reset.scss
@@ -93,9 +93,9 @@ a:not([class]) {
 :where(a) {
 	color: inherit;
 	text-decoration: none;
-	&:enter {
-		text-decoration: underline;
-	}
+	// &:enter {
+	// text-decoration: underline;
+	// }
 }
 
 :where(a, button) {
