--- a/web/src/Styles/Tokens/_color.scss
+++ b/web/src/Styles/Tokens/_color.scss
@@ -1,4 +1,5 @@
 @use "/Abstracts" as *;
+@use "sass:string" as str;
 
 @function hsl($h, $s, $l) {
 	@if $env == "color" {
@@ -15,14 +16,24 @@ $colors: (
 		900: hsl(240, 5%, 97%),
 	),
 	gradient: (
-		100: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%),
+		text: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%),
+		shadow: linear-gradient(0deg, #000000eb 0%, #0000 70%),
 	),
 );
 
 @mixin create-custom-prop($list) {
 	@each $type, $value in $list {
 		@each $shade, $color in $value {
-			#{$color-var}-#{$type}-#{$shade}: #{$color};
+			$gradientStr: "linear-gradient(";
+			$isGradient: str-slice($color, 0, str-length($gradientStr)) == $gradientStr;
+
+			@if $isGradient {
+				--#{$type}-#{$shade}: #{$color};
+			}
+			//
+			@else {
+				#{$color-var}-#{$type}-#{$shade}: #{$color};
+			}
 		}
 	}
 }
