--- a/web/src/Styles/Tokens/_color.scss
+++ b/web/src/Styles/Tokens/_color.scss
@@ -15,6 +15,9 @@ $colors: (
 		100: hsl(240, 5%, 7%),
 		900: hsl(240, 5%, 97%),
 	),
+	brand: (
+		300: hsl(257, 16%, 18%),
+	),
 	gradient: (
 		text: linear-gradient(43deg, #4158d0 0%, #c850c0 46%, #ffcc70 100%),
 		shadow: linear-gradient(0deg, #000000eb 0%, #0000 70%),
